--- a/index.html
+++ b/index.html
@@ -1,129 +1,146 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FirstTrust Bank — Home</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Login Demo</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header, footer { background: #222; color: #fff; padding: 1rem; text-align: center; }
+    main { padding: 2rem; text-align: center; }
+
+    /* Dialog styles */
+    .backdrop {
+      position: fixed; inset: 0;
+      background: rgba(0,0,0,0.6);
+      display: flex; align-items: center; justify-content: center;
+    }
+    .dialog {
+      background: #fff; padding: 2rem;
+      border-radius: 8px; max-width: 400px; width: 100%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      position: relative;
+    }
+    .dialog h2 { margin-top: 0; }
+    .dialog label { display: block; margin: 0.5rem 0 0.2rem; text-align: left; }
+    .dialog input, .dialog select {
+      width: 100%; padding: 0.6rem; margin-bottom: 1rem;
+      border: 1px solid #ccc; border-radius: 4px;
+    }
+    .dialog button {
+      padding: 0.6rem 1rem; border: none;
+      border-radius: 4px; cursor: pointer;
+    }
+    .primary { background: #007bff; color: #fff; }
+    .secondary { background: #ccc; margin-left: 0.5rem; }
+    .close-btn {
+      position: absolute; right: 10px; top: 10px;
+      background: transparent; border: none; font-size: 1.2rem; cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <a class="brand" href="#" aria-label="FirstTrust Bank home">
-      <div class="logo" aria-hidden="true">FT</div>
-      <div class="brand-text">
-        <div class="brand-title">FirstTrust Bank</div>
-        <div class="brand-sub">Secure. Simple. Local.</div>
-      </div>
-    </a>
-
-    <nav class="main-nav" aria-label="Main navigation">
-      <a href="#" class="nav-link">Home</a>
-      <a href="#" class="nav-link">Personal</a>
-      <a href="#" class="nav-link">Business</a>
-      <a href="#" class="nav-link">Contact</a>
-    </nav>
-
-    <div class="header-actions">
-      <button id="openLogin" class="btn btn-primary" aria-haspopup="dialog">Log in</button>
-    </div>
+  <header>
+    <h1>My Demo Site</h1>
   </header>
 
-  <main class="container">
-    <section class="hero">
-      <div class="hero-left">
-        <p class="eyebrow">Welcome to FirstTrust</p>
-        <h1>Banking built around you</h1>
-        <p class="lead">Everyday banking, competitive rates, and dedicated support — open an account or log in to manage yours.</p>
-        <div class="hero-ctas">
-          <a class="btn btn-secondary" href="#">Open an account</a>
-          <a class="btn btn-ghost" href="#">View rates</a>
-        </div>
-      </div>
-
-      <aside class="hero-right card">
-        <h3>Featured rates</h3>
-        <dl class="rates">
-          <div class="rate">
-            <dt>High-Yield Savings</dt>
-            <dd><strong>3.25%</strong> APY</dd>
-          </div>
-          <div class="rate">
-            <dt>12 mo CD</dt>
-            <dd><strong>4.10%</strong> APY</dd>
-          </div>
-        </dl>
-        <a class="btn btn-outline" href="#">View all rates</a>
-      </aside>
-    </section>
-
-    <section class="features">
-      <article class="card">
-        <div class="icon">🏦</div>
-        <h4>Personal Banking</h4>
-        <p>Checking and savings accounts with mobile access and no hidden fees.</p>
-      </article>
-
-      <article class="card">
-        <div class="icon">💼</div>
-        <h4>Business Solutions</h4>
-        <p>Accounts, payroll, and merchant services tailored for businesses.</p>
-      </article>
-
-      <article class="card">
-        <div class="icon">🧾</div>
-        <h4>Loans & Mortgages</h4>
-        <p>Competitive rates and flexible terms with expert guidance.</p>
-      </article>
-    </section>
-
-    <footer class="site-footer">
-      <div class="footer-left">
-        <strong>FirstTrust Bank</strong>
-        <div class="muted">© <span id="year"></span> FirstTrust Bank. All rights reserved.</div>
-      </div>
-      <div class="footer-right">
-        <div class="muted">Support: (800) 555-0123 — support@firsttrust.example</div>
-      </div>
-    </footer>
+  <main>
+    <p>Welcome! Please log in to continue.</p>
+    <button id="openLogin">Login</button>
   </main>
 
-  <!-- Login dialog -->
-  <div id="loginDialog" class="dialog" role="dialog" aria-modal="true" aria-labelledby="loginTitle" hidden>
-    <div class="dialog-panel" role="document">
-      <button class="dialog-close" aria-label="Close login dialog" id="closeLogin">&times;</button>
-      <h2 id="loginTitle">Sign in to FirstTrust</h2>
+  <footer>
+    &copy; <span id="year"></span> My Demo App
+  </footer>
 
-      <form id="loginForm" novalidate>
-        <label class="field">
-          <span class="field-label">Email</span>
-          <input id="email" name="email" type="email" inputmode="email" autocomplete="email" required placeholder="you@example.com">
-        </label>
+  <!-- Backdrop + Dialog -->
+  <div id="dialogBackdrop" class="backdrop" hidden>
+    <div id="loginDialog" class="dialog" hidden>
+      <button id="closeLogin" class="close-btn">&times;</button>
+      <h2>Login</h2>
+      <form id="loginForm">
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
 
-        <label class="field">
-          <span class="field-label">Password</span>
-          <input id="password" name="password" type="password" autocomplete="current-password" required placeholder="••••••••">
-        </label>
+        <label for="password">Password</label>
+        <input type="password" id="password" required>
 
-        <label class="field">
-          <span class="field-label">Sign in as</span>
-          <select id="role" name="role" aria-label="Select role to sign in">
-            <option value="customer" selected>Customer</option>
-            <option value="admin">Admin</option>
-          </select>
-        </label>
+        <label for="role">Role</label>
+        <select id="role">
+          <option value="customer">Customer</option>
+          <option value="admin">Admin</option>
+        </select>
 
-        <div class="form-actions">
-          <button type="submit" class="btn btn-primary" id="submitLogin">Sign in</button>
-          <button type="button" class="btn btn-link" id="cancelLogin">Cancel</button>
-        </div>
-
-        <p class="muted small">Demo redirects only — this page does not perform server-side authentication. For production, implement secure authentication (TLS, server validation, sessions).</p>
+        <button type="submit" class="primary">Login</button>
+        <button type="button" id="cancelLogin" class="secondary">Cancel</button>
       </form>
     </div>
   </div>
 
-  <div id="dialogBackdrop" class="backdrop" hidden></div>
+  <script>
+    // Lightweight dialog + demo login redirect logic (client-side only).
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-  <script src="script.js"></script>
+    const openLogin = document.getElementById('openLogin');
+    const loginDialog = document.getElementById('loginDialog');
+    const backdrop = document.getElementById('dialogBackdrop');
+    const closeLogin = document.getElementById('closeLogin');
+    const cancelLogin = document.getElementById('cancelLogin');
+    const loginForm = document.getElementById('loginForm');
+
+    // Open dialog
+    openLogin.addEventListener('click', () => {
+      showDialog();
+    });
+
+    // Close handlers
+    closeLogin.addEventListener('click', hideDialog);
+    cancelLogin.addEventListener('click', hideDialog);
+    backdrop.addEventListener('click', hideDialog);
+
+    function showDialog(){
+      loginDialog.hidden = false;
+      backdrop.hidden = false;
+      // trap focus to first input for accessibility
+      setTimeout(() => document.getElementById('email').focus(), 50);
+      document.body.style.overflow = 'hidden';
+    }
+
+    function hideDialog(){
+      loginDialog.hidden = true;
+      backdrop.hidden = true;
+      document.body.style.overflow = '';
+      openLogin.focus();
+    }
+
+    // Handle ESC to close
+    document.addEventListener('keydown', (ev) => {
+      if(ev.key === 'Escape' && !loginDialog.hidden){
+        hideDialog();
+      }
+    });
+
+    // Demo login handling
+    loginForm.addEventListener('submit', function(ev){
+      ev.preventDefault();
+      const email = document.getElementById('email').value.trim();
+      const passwd = document.getElementById('password').value;
+      const role = document.getElementById('role').value;
+
+      if(!email || !passwd){
+        alert('Please fill email and password.');
+        return;
+      }
+
+      // NOTE: This is a demo-only client-side redirect.
+      // In production, perform server-side authentication and protect admin routes on the server.
+      if(role === 'admin'){
+        // redirect to admin dashboard
+        window.location.href = 'admin.html';
+      } else {
+        // redirect to customer dashboard
+        window.location.href = 'customer.html';
+      }
+    });
+  </script>
 </body>
 </html>
